tests/Fase2-Semantic/error/t27-return_a_different_type_than_method_declared.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        integer a;
        bool c;
        a = x+b; 
        return c;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
